gitops/core/actualbudget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "budget.delaleusystems.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: actualbudget
          port: 80
